# threes-with-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: plot_threes_log.py
src/: board.rs  bot.rs  game.rs  lib.rs  logging.rs  main.rs  tui.rs
