[package]
name = "threes-with-bot"
version = "0.1.0"
description = "Terminal Threes clone with human play, bot opponent support, and alpha-beta bot evaluation"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.80"
authors = ["Threes Contributors"]
keywords = ["game", "threes", "terminal", "cli", "ai"]
categories = ["games", "command-line-utilities"]
exclude = [
    "/target",
    "/.github",
    "/.idea",
    "/.vscode",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
